<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Guidelines Horizontal -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDatosAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRespuestaCorrecta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOpcionesRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSeccionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePreguntaSeleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOpcionesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePreguntaDesarrollo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExplicacionDesarrollo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <!-- Guidelines Vertical -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMargenIzquierdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDivisionVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMargenDerecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <!-- Elementos del Layout -->
    <TextView
        android:id="@+id/TextoTituloExamen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examen_de_android"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Texto1DatosAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_datos_del_alumno"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDatosAlumno"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDivisionVertical"
        app:layout_constraintStart_toStartOf="@+id/guidelineMargenIzquierdo"
        app:layout_constraintTop_toTopOf="@+id/guidelineTitulo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDatosAlumno"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMargenDerecho"
        app:layout_constraintStart_toStartOf="@+id/guidelineDivisionVertical"
        app:layout_constraintTop_toTopOf="@+id/guidelineTitulo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo1" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/TextoCorreo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:textColor="@color/purple"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCorreo"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMargenDerecho"
        app:layout_constraintStart_toStartOf="@+id/guidelineMargenIzquierdo"
        app:layout_constraintTop_toTopOf="@+id/guidelineDatosAlumno" />

    <TextView
        android:id="@+id/Texto2RespuestaCorrecta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_selecciona_la_respuesta_correcta"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineRespuestaCorrecta"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMargenDerecho"
        app:layout_constraintStart_toStartOf="@+id/guidelineMargenIzquierdo"
        app:layout_constraintTop_toTopOf="@+id/guidelineCorreo" />

    <TextView
        android:id="@+id/PreguntaRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qu_componente_se_n_utiliza_para_crear_dise_os_n_flexibles"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOpcionesRadio"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDivisionVertical"
        app:layout_constraintStart_toStartOf="@+id/guidelineMargenIzquierdo"
        app:layout_constraintTop_toTopOf="@+id/guidelineRespuestaCorrecta" />

    <RadioGroup
        android:id="@+id/radioGroupPregunta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOpcionesRadio"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMargenDerecho"
        app:layout_constraintStart_toStartOf="@+id/guidelineDivisionVertical"
        app:layout_constraintTop_toTopOf="@+id/guidelineRespuestaCorrecta">

        <RadioButton
            android:id="@+id/RadioButtonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linearlayout" />

        <RadioButton
            android:id="@+id/RadioButtonConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/constraintlayout" />

        <RadioButton
            android:id="@+id/RadioButtonFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/framelayout" />
    </RadioGroup>

    <TextView
        android:id="@+id/Texto3Selecciona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3_selecciona_todas_las_que_apliquen"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSeccionCheckBox"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMargenDerecho"
        app:layout_constraintStart_toStartOf="@+id/guidelineMargenIzquierdo"
        app:layout_constraintTop_toTopOf="@+id/guidelineOpcionesRadio" />

    <TextView
        android:id="@+id/PreguntaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cu_les_son_componentes_de_la_arquitectura_android"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePreguntaSeleccion"
        app:layout_constraintStart_toStartOf="@+id/guidelineMargenIzquierdo"
        app:layout_constraintTop_toTopOf="@+id/guidelineSeccionCheckBox" />

    <CheckBox
        android:id="@+id/checkBoxActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOpcionesCheckBox"
        app:layout_constraintStart_toStartOf="@+id/guidelineMargenIzquierdo"
        app:layout_constraintTop_toTopOf="@+id/guidelinePreguntaSeleccion" />

    <CheckBox
        android:id="@+id/checkBoxViewModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/viewmodel"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOpcionesCheckBox"
        app:layout_constraintStart_toEndOf="@+id/checkBoxActivity"
        app:layout_constraintTop_toTopOf="@+id/guidelinePreguntaSeleccion" />

    <CheckBox
        android:id="@+id/checkBoxJavaScript"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/javascript"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOpcionesCheckBox"
        app:layout_constraintStart_toEndOf="@+id/checkBoxViewModel"
        app:layout_constraintTop_toTopOf="@+id/guidelinePreguntaSeleccion" />

    <CheckBox
        android:id="@+id/checkBoxRepository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOpcionesCheckBox"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMargenDerecho"
        app:layout_constraintStart_toEndOf="@+id/checkBoxJavaScript"
        app:layout_constraintTop_toTopOf="@+id/guidelinePreguntaSeleccion" />

    <TextView
        android:id="@+id/Texto4PreguntaDeDesarrollo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_pregunta_de_desarrollo"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePreguntaDesarrollo"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMargenDerecho" />

    <EditText
        android:id="@+id/TextoExplicacionDependency"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/explica_qu_es_dependency_injection"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExplicacionDesarrollo"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMargenDerecho"
        app:layout_constraintStart_toStartOf="@+id/guidelineMargenIzquierdo"
        app:layout_constraintTop_toTopOf="@+id/guidelinePreguntaDesarrollo" />

    <Button
        android:id="@+id/BotonEnviarExamen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/enviar_examen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMargenDerecho"
        app:layout_constraintStart_toStartOf="@+id/guidelineMargenIzquierdo"
        app:layout_constraintTop_toTopOf="@+id/guidelineExplicacionDesarrollo" />

</androidx.constraintlayout.widget.ConstraintLayout>